--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -1,18 +1,38 @@
-<!--
-  Generated template for the CartPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>cart</ion-title>
+    <ion-title>
+      Cart
+    </ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
+
+
+  <div *ngIf="isdata" style="display: flex">
+
+    <div *ngFor="let items of data">
+      <div style="height: 110px;">
+        <img src="assets/{{items.img}}" style="height:100px;width:100px">
+      </div>
+
+      <div style="height: 110px;">
+        <p class="title">{{items.name}}</p>
+        <span style="color:dimgrey">Size: S</span><span style="color:dimgrey"> Color: Grey</span>
+        <p class="price">{{items.price}}</p>
+      </div>
+      <hr>
+    </div>
+
+  </div>
+  <div [hidden]="isdata">
+    <p style="padding-top:10px;padding-left:10px;color:#CCCCCC;font-size: 20px;"> Your cart is empty</p>
+  </div>
+
 
 </ion-content>
