--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,34 +1,32 @@
+
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>
+      Home
+    </ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
- <ion-grid>
-  <ion-row>
-    <ion-col>
-    <li *ngFor=let data of item>{{data}}</li>
-      <img (click)="openModal()" src="/assets/product1.jpg">
-      <p class="title">Khadi Casual Wear </p>
-      <span class="price">₹ 1289</span>
-      <span>  <ion-icon class="fav-icon" name="ios-heart-outline"></ion-icon></span>
+  <ion-grid>
 
-    </ion-col>
-    <ion-col>
-      <img src="/assets/product2.jpg">
-      <p class="title">Grey stripped Kurtis </p>
-      <span class="price">₹ 3999</span>
-      <span>  <ion-icon class="fav-icon" name="ios-heart-outline"></ion-icon></span>
-    </ion-col>
-  </ion-row>
-  <ion-row>
-  <ion-col>
-      <img src="/assets/product3.jpg">
-    </ion-col>
-    <ion-col>
-      <img src="/assets/product4.jpg">
-    </ion-col>
-  </ion-row>
-</ion-grid>
+    <img src="assets/hom3.jpg">
+    <div style="display: flex;padding-top:7px;">
+      <div><img src="assets/hom2.jpg"></div>
+      <div style="padding-left:4px;"><img src="assets/hom1.jpg"></div>
+    </div>
+
+    <ion-row>
+      <ion-col *ngFor="let item of items;let i = index;">
+        <img (click)="openModal(i)" src="assets/{{item.img}}">
+        <p class="title">{{item.name}} </p>
+        <span class="price">₹ {{item.price}}</span>
+        <span>  <ion-icon class="fav-icon" name="ios-heart-outline"></ion-icon></span>
+      </ion-col>
+    </ion-row>
+
+  </ion-grid>
 </ion-content>
