--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,12 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Offer Zone" tabIcon="ios-star-outline"></ion-tab>
+<!--
   <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
+-->
+  <ion-tab [root]="tab3Root" tabTitle="Cart" tabIcon="cart"></ion-tab>
+<!--
   <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
-   <ion-tab [root]="tab3Root" tabTitle="Profile" tabIcon="person"></ion-tab>
-   <ion-tab [root]="tab3Root" tabTitle="Cart" tabIcon="cart"></ion-tab>
+-->
+  <ion-tab [root]="tab5Root" tabTitle="Profile" tabIcon="person"></ion-tab>
 </ion-tabs>
